<resources>
    <string name="app_name">Google Books Library</string>
    <string name="search_hint">Type name of the book...</string>
    <string name="publisher">Publisher</string>
    <string name="no_of_pages">Number of Pages</string>
    <string name="publish_date">Publish Date</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="buy">Buy</string>
</resources>